Stop rating stars from wrapping in quick update

--- a/app/styles/layout/_quick-update.scss
+++ b/app/styles/layout/_quick-update.scss
@@ -78,7 +78,7 @@
 
   .quick-update-item {
     width: 12%;
-    min-width: 150px;
+    min-width: 190px;
     max-width: 275px;
     height: 200px;
     border-radius: 3px;
@@ -152,6 +152,7 @@
 
     .review-button {
       margin-top: 0;
+      margin-bottom: 50px;
     }
   }
 }
